[package]
name = "download-video-youtube"
version = "0.1.0"
edition = "2021"
authors = ["Felipe Mateus <eu@felipemateus.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"
crate-type = ["dylib"] # could be `staticlib` as well

[dependencies]
rustube = "0.6.0"
tokio = "1.37.0"
